--- a/gesture-recognizer-extension/popup.html
+++ b/gesture-recognizer-extension/popup.html
@@ -31,7 +31,7 @@
 </head>
 <body>
   <div class="header">
-    <h2>Gesture PDF Controller</h2>
+    <h2>Grayscale Scroller</h2>
   </div>
   
   <div class="info">
